JSon de Agentes y Valores, funciones constructoras

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/styles/grid.css">
     <link rel="stylesheet" href="./assets/styles/styleSheetRemax.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script defer src='assets/scripts/main.js'></script>
 
 </head>
 
@@ -18,18 +19,28 @@
     <header>
         <div class="grid">
             <div class="col-4-12">
-                <img src="assets\images\TIME 2018 (RGB).webp">
+                <img src="assets\images\TIME 2018 (RGB).png">
             </div>
         </div>
     </header>
 
+    <section class="perfil">
+        <div class="grid">
+            <div class="col-1-1">
+                <h2 style="color:#FFFFFF;font-size:30px;font-weight: bold;text-align: center;padding:0.8em"><span>PERFIL DEL
+                        AGENTE</span></h2>
+            </div>
+            <div style="margin:5em" id="containerValores"></div>
+        </div>
+    </section>
 
     <section class="teams">
         <div class="grid">
-            <div class="col-1-1" style="text-align: center;">
+            <div class="col-1-1">
                 <h2 style="color:#1e3054;font-size:30px;font-weight: bold;text-align: center;"><span>NUESTRO
                         EQUIPO</span></h2>
             </div>
+            <div style="margin:5em" id="containerAgent"></div>
         </div>
     </section>
 
