Scrollbuttons header, refactor styleSheet

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -17,27 +17,36 @@
 
 <body>
     <header>
-        <div class="grid">
-            <div class="col-4-12">
+        <div class="grid" style="margin-left:9em">
+            <div class="col-2-12">
                 <img src="assets\images\TIME 2018 (RGB).png">
             </div>
-        </div>
+            <div class="col-2-12">
+                <div class="hh">
+                    <a href="#perfil">Perfil de Agente</a>
+                </div>
+            </div>
+            <div class="col-2-12">
+                <div class="hh">
+                    <a href="#teams">Nuestro Equipo</a>
+                </div>
+            </div>
     </header>
 
-    <section class="perfil">
+    <section class="perfil" id="perfil">
         <div class="grid">
             <div class="col-1-1">
-                <h2 style="color:#FFFFFF;font-size:30px;font-weight: bold;text-align: center;padding:0.8em"><span>PERFIL DEL
+                <h2><span>PERFIL DEL
                         AGENTE</span></h2>
             </div>
             <div style="margin:5em" id="containerValores"></div>
         </div>
     </section>
 
-    <section class="teams">
+    <section class="teams" id="teams">
         <div class="grid">
             <div class="col-1-1">
-                <h2 style="color:#1e3054;font-size:30px;font-weight: bold;text-align: center;"><span>NUESTRO
+                <h2><span>NUESTRO
                         EQUIPO</span></h2>
             </div>
             <div style="margin:5em" id="containerAgent"></div>
@@ -47,22 +56,6 @@
     <footer>
         <div class="grid">
             <div class="col-6-12" style="padding-left: 10em;">
-                <style type="text/css">
-                    A {
-                        font-family: verdana;
-                        color: white;
-                        text-decoration: none;
-                    }
-                </style>
-                <style type="text/css">
-                    p {
-                        font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                        color: white;
-                        text-decoration: none;
-                        line-height: 0.3em;
-                        font-size: 18px;
-                    }
-                </style>
                 <img src="assets\images\footer.webp">
                 <p><span style="font-weight: bold;">DIRECCIÓN: </span><span>Camargo 537, Villa Crespo, CABA.</span>
                 <p><span style="font-weight: bold;">TELÉFONO: </span><span> 4858-3090</span>
