--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -10,6 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/styles/grid.css">
     <link rel="stylesheet" href="./assets/styles/styleSheetRemax.css">
+    <link rel="stylesheet" href="assets/styles/simpleSlider.min.css">
+    <link rel="stylesheet" href="assets/styles/theme.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script defer src='assets/scripts/main.js'></script>
 
@@ -32,6 +34,41 @@
                 </div>
             </div>
     </header>
+
+    <div class="page">
+        <!-- Slider -->
+        <div class="simple-slider page-slider">
+          <div class="slider-wrapper">
+            <div class="slider-slide">
+                <img src="assets\images\slideShow\1.jpg" style="width:100%">
+              </div>
+            <div class="slider-slide">
+              <img src="assets\images\slideShow\2.png" style="width:100%">
+            </div>
+            <div class="slider-slide">
+              <img src="assets\images\slideShow\3.png" style="width:100%">
+            </div>
+            <div class="slider-slide">
+              <img src="assets\images\slideShow\4.jpg" style="width:100%">
+            </div>
+            <div class="slider-slide">
+                <img src="assets\images\slideShow\5.jpg" style="width:100%">
+              </div>
+              <div class="slider-slide">
+                <img src="assets\images\slideShow\6.jpg" style="width:100%">
+              </div>
+          </div>
+        </div>
+        <!-- /Slider -->
+      </div>
+      
+      <script src="assets/styles/simpleSlider.min.js"></script>
+      <script>
+        new SimpleSlider('.page-slider', {
+          autoplay: true,
+          delay: 2000
+        });
+      </script>
 
     <section class="perfil" id="perfil">
         <div class="grid">
