Slider overlay text

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -58,11 +58,12 @@
                 <img src="assets\images\slideShow\6.jpg" style="width:100%">
               </div>
           </div>
+          <div class="slider-text"><span>Sos emprendedor y queres tener </span><span style="font-weight: bold;">TU PROPIO NEGOCIO?</span</div>
         </div>
         <!-- /Slider -->
       </div>
       
-      <script src="assets/styles/simpleSlider.min.js"></script>
+      <script src="assets/scripts/simpleSlider.min.js"></script>
       <script>
         new SimpleSlider('.page-slider', {
           autoplay: true,
