--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -2,109 +2,134 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
 
-    <title>Inicio Remax</title>
+  <title>Inicio Remax</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/styles/grid.css">
-    <link rel="stylesheet" href="./assets/styles/styleSheetRemax.css">
-    <link rel="stylesheet" href="assets/styles/simpleSlider.min.css">
-    <link rel="stylesheet" href="assets/styles/theme.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script defer src='assets/scripts/main.js'></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./assets/styles/grid.css">
+  <link rel="stylesheet" href="./assets/styles/styleSheetRemax.css">
+  <link rel="stylesheet" href="assets/styles/simpleSlider.min.css">
+  <link rel="stylesheet" href="assets/styles/theme.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script defer src='assets/scripts/main.js'></script>
 
 </head>
 
 <body>
-    <header>
-        <div class="grid" style="margin-left:9em">
-            <div class="col-2-12">
-                <img src="assets\images\TIME 2018 (RGB).png">
-            </div>
-            <div class="col-2-12">
-                <div class="hh">
-                    <a href="#perfil">Perfil de Agente</a>
-                </div>
-            </div>
-            <div class="col-2-12">
-                <div class="hh">
-                    <a href="#teams">Nuestro Equipo</a>
-                </div>
-            </div>
-    </header>
-
-    <div class="page">
-        <!-- Slider -->
-        <div class="simple-slider page-slider">
-          <div class="slider-wrapper">
-            <div class="slider-slide">
-                <img src="assets\images\slideShow\1.jpg" style="width:100%">
-              </div>
-            <div class="slider-slide">
-              <img src="assets\images\slideShow\2.png" style="width:100%">
-            </div>
-            <div class="slider-slide">
-              <img src="assets\images\slideShow\3.png" style="width:100%">
-            </div>
-            <div class="slider-slide">
-              <img src="assets\images\slideShow\4.jpg" style="width:100%">
-            </div>
-            <div class="slider-slide">
-                <img src="assets\images\slideShow\5.jpg" style="width:100%">
-              </div>
-              <div class="slider-slide">
-                <img src="assets\images\slideShow\6.jpg" style="width:100%">
-              </div>
-          </div>
-          <div class="slider-text"><span>Sos emprendedor y queres tener </span><span style="font-weight: bold;">TU PROPIO NEGOCIO?</span</div>
-        </div>
-        <!-- /Slider -->
+  <header>
+    <div class="grid" style="margin-left:9em">
+      <div class="col-2-12">
+        <img src="assets\images\TIME 2018 (RGB).png">
       </div>
-      
-      <script src="assets/scripts/simpleSlider.min.js"></script>
-      <script>
-        new SimpleSlider('.page-slider', {
-          autoplay: true,
-          delay: 2000
-        });
-      </script>
+      <div class="col-2-12">
+        <div class="hh">
+          <a href="#porque">Quienes somos</a>
+        </div>
+      </div>
+      <div class="col-2-12">
+        <div class="hh">
+          <a href="#perfil">Perfil de Agente</a>
+        </div>
+      </div>
+      <div class="col-2-12">
+        <div class="hh">
+          <a href="#teams">Nuestro Equipo</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <div class="page">
+    <!-- Slider -->
+    <div class="simple-slider page-slider">
+      <div class="slider-wrapper">
+        <div class="slider-slide">
+          <img src="assets\images\slideShow\1.jpg" style="width:100%">
+        </div>
+        <div class="slider-slide">
+          <img src="assets\images\slideShow\2.png" style="width:100%">
+        </div>
+        <div class="slider-slide">
+          <img src="assets\images\slideShow\3.png" style="width:100%">
+        </div>
+        <div class="slider-slide">
+          <img src="assets\images\slideShow\4.jpg" style="width:100%">
+        </div>
+        <div class="slider-slide">
+          <img src="assets\images\slideShow\5.jpg" style="width:100%">
+        </div>
+        <div class="slider-slide">
+          <img src="assets\images\slideShow\6.jpg" style="width:100%">
+        </div>
+      </div>
+      <div class="slider-text"><span>Sos emprendedor y queres tener </span><span style="font-weight: bold;">TU PROPIO
+          NEGOCIO?</span< /div>
+      </div>
+      <!-- /Slider -->
+    </div>
+
+    <script src="assets/scripts/simpleSlider.min.js"></script>
+    <script>
+      new SimpleSlider('.page-slider', {
+        autoplay: true,
+        delay: 2000
+      });
+    </script>
+
+    <section class="porque" id="porque" >
+      <overlay>
+        <div><text>Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:55%;padding-left: 0.5em;"> ?</text>
+        </div>>
+        <text2 id="text2">RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
+          Argentina
+          desde el año 2006.</text2>
+        <text2 id="text2" style="top:47%">Es una empresa dinámica que está transitando un momento de expansión.
+        </text2>
+        <text2 style="top:64%">RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las
+          más altas comisiones del mercado.</text2>
+        <text2 id="text2" style="top:81%">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y Uruguay.
+        </text2>
+        <imageGlobo><img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:50%"></imageGlobo>
+        <imagePQ><img src="assets/images/porqueRemax.jpg" style="width:103%"></imagePQ>
+      </overlay>
+    </section>
 
     <section class="perfil" id="perfil">
-        <div class="grid">
-            <div class="col-1-1">
-                <h2><span>PERFIL DEL
-                        AGENTE</span></h2>
-            </div>
-            <div style="margin:5em" id="containerValores"></div>
+      <div class="grid">
+        <div class="col-1-1">
+          <h2><span>PERFIL DEL
+              AGENTE</span></h2>
         </div>
+        <div style="margin:5em" id="containerValores"></div>
+      </div>
     </section>
 
     <section class="teams" id="teams">
-        <div class="grid">
-            <div class="col-1-1">
-                <h2><span>NUESTRO
-                        EQUIPO</span></h2>
-            </div>
-            <div style="margin:5em" id="containerAgent"></div>
+      <div class="grid">
+        <div class="col-1-1">
+          <h2><span>NUESTRO
+              EQUIPO</span></h2>
         </div>
+        <div style="margin:5em" id="containerAgent"></div>
+      </div>
     </section>
 
     <footer>
-        <div class="grid">
-            <div class="col-6-12" style="padding-left: 10em;">
-                <img src="assets\images\footer.webp">
-                <p><span style="font-weight: bold;">DIRECCIÓN: </span><span>Camargo 537, Villa Crespo, CABA.</span>
-                <p><span style="font-weight: bold;">TELÉFONO: </span><span> 4858-3090</span>
-                <p><span style="font-weight: bold;">MAIL:</span><span><a href="mailto:time@remax.com.ar">
-                            time@remax.com.ar</a></span></p>
-                <p><span style="font-size:8px;line-height:1em">En cumplimiento de las normas legales aplicables,
-                        informamos que los Agentes NO ejercen el Corretaje Inmobiliario. Todas las Operaciones
-                        Inmobiliarias son concluídas por los Corredores Matriculados responsables en cada
-                        oficina</p>
-            </div>
+      <div class="grid">
+        <div class="col-6-12" style="padding-left: 10em;">
+          <img src="assets\images\footer.webp">
+          <p><span style="font-weight: bold;">DIRECCIÓN: </span><span>Camargo 537, Villa Crespo, CABA.</span>
+          <p><span style="font-weight: bold;">TELÉFONO: </span><span> 4858-3090</span>
+          <p><span style="font-weight: bold;">MAIL:</span><span><a href="mailto:time@remax.com.ar">
+                time@remax.com.ar</a></span></p>
+          <p><span style="font-size:8px;line-height:1em">En cumplimiento de las normas legales aplicables,
+              informamos que los Agentes NO ejercen el Corretaje Inmobiliario. Todas las Operaciones
+              Inmobiliarias son concluídas por los Corredores Matriculados responsables en cada
+              oficina</p>
         </div>
+      </div>
     </footer>
 </body>
 
