--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <title>Inicio Remax</title>
+  <title> Inicio | RE/MAX </title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <div class="grid" style="margin-left:9em">
+    <div class="grid" style="margin-left:0em">
       <div class="col-2-12">
         <img src="assets\images\TIME 2018 (RGB).png">
       </div>
@@ -78,22 +78,24 @@
       });
     </script>
 
-    <section class="porque" id="porque" >
-      <overlay>
-        <div><text>Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:55%;padding-left: 0.5em;"> ?</text>
-        </div>>
-        <text2 id="text2">RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
-          Argentina
-          desde el año 2006.</text2>
-        <text2 id="text2" style="top:47%">Es una empresa dinámica que está transitando un momento de expansión.
-        </text2>
-        <text2 style="top:64%">RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las
-          más altas comisiones del mercado.</text2>
-        <text2 id="text2" style="top:81%">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y Uruguay.
-        </text2>
-        <imageGlobo><img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:50%"></imageGlobo>
-        <imagePQ><img src="assets/images/porqueRemax.jpg" style="width:103%"></imagePQ>
-      </overlay>
+    <section class="porque" id="porque">
+      <div class="grid">
+        <div class="col-1-2" style=" background-color: rgba(138, 202, 255, 1);">
+          <h1>Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?</h1>
+          <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
+            Argentina desde el año 2006.</h2>
+          <h2>Es una empresa dinámica que está transitando un momento de expansión.
+          </h2>
+          <h2>RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las más
+            altas comisiones del mercado.</h2>
+          <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y
+            Uruguay.</h2>
+        </div>
+        <div class="col-1-2">
+          <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:15%"></img>
+          <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 15%;">
+        </div>
+      </div>
     </section>
 
     <section class="perfil" id="perfil">
