Solucion errores responsive

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -91,9 +91,9 @@
           <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y
             Uruguay.</h2>
         </div>
-        <div class="col-1-2">
-          <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:15%"></img>
-          <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 15%;">
+        <div class="col-1-2" style="padding-right: 0em;">
+          <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:10%;padding-top: 8%"></img>
+          <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 10%">
         </div>
       </div>
     </section>
