Solucion errores responsive

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -19,21 +19,26 @@
 
 <body>
   <header>
-    <div class="grid" style="margin-left:0em">
+    <div class="grid" style="margin-left:9em">
       <div class="col-2-12">
         <img src="assets\images\TIME 2018 (RGB).png">
       </div>
-      <div class="col-2-12">
+      <div class="col-1-12">
+        <div class="hh">
+          <a href="#inicio">inicio</a>
+        </div>
+      </div>
+      <div class="col-1-12">
         <div class="hh">
           <a href="#porque">Quienes somos</a>
         </div>
       </div>
-      <div class="col-2-12">
+      <div class="col-1-12">
         <div class="hh">
           <a href="#perfil">Perfil de Agente</a>
         </div>
       </div>
-      <div class="col-2-12">
+      <div class="col-1-12">
         <div class="hh">
           <a href="#teams">Nuestro Equipo</a>
         </div>
