Parte de perfil del agente proyectada, falta json y funcion constructora

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -19,8 +19,8 @@
 
 <body>
   <header>
-    <div class="grid" style="margin-left:9em">
-      <div class="col-2-12">
+    <div class="grid">
+      <div class="col-2-12" style="margin-left:9em">
         <img src="assets\images\TIME 2018 (RGB).png">
       </div>
       <div class="col-1-12">
@@ -30,7 +30,12 @@
       </div>
       <div class="col-1-12">
         <div class="hh">
-          <a href="#porque">Quienes somos</a>
+          <a href="#quienes">Quienes somos</a>
+        </div>
+      </div>
+      <div class="col-1-12">
+        <div class="hh">
+          <a href="#propuesta">Perfil del agente</a>
         </div>
       </div>
       <div class="col-1-12">
@@ -86,7 +91,7 @@
     <section class="porque" id="porque">
       <div class="grid">
         <div class="col-1-2" style=" background-color: rgba(138, 202, 255, 1);">
-          <h1>Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?</h1>
+          <h1 id="quienes">Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?</h1>
           <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
             Argentina desde el año 2006.</h2>
           <h2>Es una empresa dinámica que está transitando un momento de expansión.
@@ -99,6 +104,87 @@
         <div class="col-1-2" style="padding-right: 0em;">
           <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:10%;padding-top: 8%"></img>
           <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 10%">
+        </div>
+        <div class="col-1-1">
+          <h1 id="propuesta" style="margin-top: 1em;">Por qué<img src="assets\images/REMAXTIME.png"
+              style="width:20%;padding-left: 0.5em;">?</h1>
+        </div>
+        <div style="margin:15em" id="containerBoxes">
+          <div class="col-1-3">
+            <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
+              <article class="propuesta">
+                <div class="col-1-3">
+                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                </div>
+                <div class="col-2-3">
+                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="col-1-3">
+            <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
+              <article class="propuesta">
+                <div class="col-1-3">
+                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                </div>
+                <div class="col-2-3">
+                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="col-1-3">
+            <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
+              <article class="propuesta">
+                <div class="col-1-3">
+                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                </div>
+                <div class="col-2-3">
+                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="col-1-2">
+            <div
+              style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;margin-left: 10em;">
+              <article class="propuesta">
+                <div class="col-1-3">
+                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                </div>
+                <div class="col-2-3">
+                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="col-1-2">
+            <div
+              style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;margin-right: 10em;">
+              <article class="propuesta">
+                <div class="col-1-3">
+                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                </div>
+                <div class="col-2-3">
+                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="col-1-1">
+            <div
+              style="background-color: rgba(193, 27, 43, 1);margin-bottom: 6em;border-radius: 15px 15px 15px;margin-left: 23em;margin-right: 25em;">
+              <article class="propuesta">
+                <div class="col-1-3">
+                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                </div>
+                <div class="col-2-3">
+                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                </div>
+              </article>
+            </div>
+          </div>
         </div>
       </div>
     </section>
