Parte de perfil del agente proyectada y mapita del footer implementado :), falta json y funcion constructora

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -48,6 +48,11 @@
           <a href="#teams">Nuestro Equipo</a>
         </div>
       </div>
+      <div class="col-1-12">
+        <div class="hh">
+          <a href="#Encontranos">Encontranos</a>
+        </div>
+      </div>
     </div>
   </header>
 
@@ -91,7 +96,8 @@
     <section class="porque" id="porque">
       <div class="grid">
         <div class="col-1-2" style=" background-color: rgba(138, 202, 255, 1);">
-          <h1 id="quienes">Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?</h1>
+          <h1 id="quienes">Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?
+          </h1>
           <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
             Argentina desde el año 2006.</h2>
           <h2>Es una empresa dinámica que está transitando un momento de expansión.
@@ -211,16 +217,29 @@
 
     <footer>
       <div class="grid">
-        <div class="col-6-12" style="padding-left: 10em;">
-          <img src="assets\images\footer.webp">
-          <p><span style="font-weight: bold;">DIRECCIÓN: </span><span>Camargo 537, Villa Crespo, CABA.</span>
-          <p><span style="font-weight: bold;">TELÉFONO: </span><span> 4858-3090</span>
-          <p><span style="font-weight: bold;">MAIL:</span><span><a href="mailto:time@remax.com.ar">
-                time@remax.com.ar</a></span></p>
-          <p><span style="font-size:8px;line-height:1em">En cumplimiento de las normas legales aplicables,
-              informamos que los Agentes NO ejercen el Corretaje Inmobiliario. Todas las Operaciones
-              Inmobiliarias son concluídas por los Corredores Matriculados responsables en cada
-              oficina</p>
+        <div id="Encontranos" style="margin-top: 5em;">
+          <div class="col-1-2" style="padding-left: 15em;">
+            <img src="assets\images\footer.webp">
+            <p><span style="font-weight: bold;">DIRECCIÓN: </span><span>Camargo 537, Villa Crespo, CABA.</span>
+            <p><span style="font-weight: bold;">TELÉFONO: </span><span> 4858-3090</span>
+            <p><span style="font-weight: bold;">MAIL:</span><span><a href="mailto:time@remax.com.ar">
+                  time@remax.com.ar</a></span></p>
+            <div style="margin-right: 10em;">
+              <p><span style="font-size:10px;line-height:1em">En cumplimiento de las normas legales aplicables,
+                  informamos que los Agentes NO ejercen el Corretaje Inmobiliario. Todas las Operaciones
+                  Inmobiliarias son concluídas por los Corredores Matriculados responsables en cada
+                  oficina</p>
+            </div>
+            <p><span style="font-weight: bold;">José David Winer | CUCICBA 6346 | CMCPSI 6433</span>
+          </div>
+          <div class="col-6-12">
+            <div style="margin-right: 15em;margin-bottom: 5em;">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1236981470406!2d-58.441577166516346!3d-34.60103344727378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbc146e0e5fd%3A0xbd2cb76b26109626!2sRemax%20Time!5e0!3m2!1ses-419!2sar!4v1601174158097!5m2!1ses-419!2sar"
+                width="100%" height="220px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
