--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="col-1-12">
         <div class="hh">
-          <a href="#propuesta">Perfil del agente</a>
+          <a href="#propuesta">Propuesta</a>
         </div>
       </div>
       <div class="col-1-12">
@@ -46,6 +46,11 @@
       <div class="col-1-12">
         <div class="hh">
           <a href="#teams">Nuestro Equipo</a>
+        </div>
+      </div>
+      <div class="col-1-12">
+        <div class="hh">
+          <a href="https://www.remax.com.ar/es-ar/oficinas/capital-federal/villa-crespo/remax-time/42100"  target="_blank">Propiedades</a>
         </div>
       </div>
       <div class="col-1-12">
@@ -107,90 +112,92 @@
           <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y
             Uruguay.</h2>
         </div>
-        <div class="col-1-2" style="padding-right: 0em;">
-          <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:10%;padding-top: 8%"></img>
-          <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 10%">
-        </div>
-        <div class="col-1-1">
-          <h1 id="propuesta" style="margin-top: 1em;">Por qué<img src="assets\images/REMAXTIME.png"
-              style="width:20%;padding-left: 0.5em;">?</h1>
-        </div>
-        <div style="margin:15em" id="containerBoxes">
-          <div class="col-1-3">
-            <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
-              <article class="propuesta">
-                <div class="col-1-3">
-                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                </div>
-                <div class="col-2-3">
-                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="col-1-3">
-            <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
-              <article class="propuesta">
-                <div class="col-1-3">
-                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                </div>
-                <div class="col-2-3">
-                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="col-1-3">
-            <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
-              <article class="propuesta">
-                <div class="col-1-3">
-                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                </div>
-                <div class="col-2-3">
-                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="col-1-2">
-            <div
-              style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;margin-left: 10em;">
-              <article class="propuesta">
-                <div class="col-1-3">
-                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                </div>
-                <div class="col-2-3">
-                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="col-1-2">
-            <div
-              style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;margin-right: 10em;">
-              <article class="propuesta">
-                <div class="col-1-3">
-                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                </div>
-                <div class="col-2-3">
-                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                </div>
-              </article>
-            </div>
+        <div>
+          <div class="col-1-2" style="padding-right: 0em;">
+            <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:10%;padding-top: 8%"></img>
+            <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 10%">
           </div>
           <div class="col-1-1">
-            <div
-              style="background-color: rgba(193, 27, 43, 1);margin-bottom: 6em;border-radius: 15px 15px 15px;margin-left: 23em;margin-right: 25em;">
-              <article class="propuesta">
-                <div class="col-1-3">
-                  <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                </div>
-                <div class="col-2-3">
-                  <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                </div>
-              </article>
-            </div>
+            <h1 id="propuesta" style="margin-top: 1em;">Por qué<img src="assets\images/REMAXTIME.png"
+                style="width:20%;padding-left: 0.5em;">?</h1>
           </div>
+          <div style="margin:15em" id="containerBoxes">
+            <div class="col-1-3">
+              <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
+                <article class="propuesta">
+                  <div class="col-1-3">
+                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                  </div>
+                  <div class="col-2-3">
+                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                  </div>
+                </article>
+              </div>
+            </div>
+            <div class="col-1-3">
+              <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
+                <article class="propuesta">
+                  <div class="col-1-3">
+                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                  </div>
+                  <div class="col-2-3">
+                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                  </div>
+                </article>
+              </div>
+            </div>
+            <div class="col-1-3">
+              <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
+                <article class="propuesta">
+                  <div class="col-1-3">
+                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                  </div>
+                  <div class="col-2-3">
+                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                  </div>
+                </article>
+              </div>
+            </div>
+            <div class="col-1-2">
+              <div
+                style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;margin-left: 10em;">
+                <article class="propuesta">
+                  <div class="col-1-3">
+                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                  </div>
+                  <div class="col-2-3">
+                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                  </div>
+                </article>
+              </div>
+            </div>
+            <div class="col-1-2">
+              <div
+                style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;margin-right: 10em;">
+                <article class="propuesta">
+                  <div class="col-1-3">
+                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                  </div>
+                  <div class="col-2-3">
+                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                  </div>
+                </article>
+              </div>
+            </div>
+            <div class="col-1-1">
+              <div
+                style="background-color: rgba(193, 27, 43, 1);margin-bottom: 6em;border-radius: 15px 15px 15px;margin-left: 23em;margin-right: 25em;">
+                <article class="propuesta">
+                  <div class="col-1-3">
+                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
+                  </div>
+                  <div class="col-2-3">
+                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
+                  </div>
+                </article>
+              </div>
+            </div>
+        </div>
         </div>
       </div>
     </section>
