--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -111,7 +111,7 @@
       <h1><span>PERFIL DEL
           AGENTE</span></h1>
       <div class="container">
-        <div class="row" id="containerValores" style="margin-left:4em;margin-right:4em"></div>
+        <div class="row justify-content-md-center" id="containerValores" style="margin-left:4em;margin-right:4em"></div>
       </div>
     </section>
 
@@ -119,7 +119,7 @@
       <h1><span>NUESTRO
           EQUIPO</span></h1>
       <div class="container">
-        <div class="row" id="containerAgent" style="margin-left:4em;margin-right:4em"></div>
+        <div class="row justify-content-md-center" id="containerAgent" style="margin-left:4em;margin-right:4em"></div>
       </div>
     </section>
 
